--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -14,8 +14,13 @@
         <div>Active Tables: <span th:text="${activeTables}"></span></div>
         <div>Pending Bills: <span th:text="${pendingBills}"></span></div>
     </div>
-    <a href="/orders">Manage Orders</a>
-    <a href="/bills">Manage Bills</a>
-    <a href="/orderdetails">View Order Details</a>
+    <a href="/admin/view/all/orders">Manage new Orders</a>
+	<a href="/admin/getAllMenuItem">Add new Menu Item</a>	
+	<a href="/admin/view/orders/24hr">View Order of 24hr</a>
+	<a href="/admin/view/all/users">View All Users</a>
+
+	<a href="/admin/register/new-user">Create new User Details</a>
+
+	
 </body>
 </html>
