--- a/src/main/resources/templates/register-form.html
+++ b/src/main/resources/templates/register-form.html
@@ -7,39 +7,48 @@
     <link rel="stylesheet" href="/css/styles.css"> <!-- Include your CSS file if needed -->
 </head>
 <body>
-    <h2>Register</h2>
-    <form th:action="@{/register}" method="post" th:object="${user}">
-        <div>
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" th:value="${user.username}" required>
-        </div>
+	<body>
+	    <h2>Register</h2>
+	    
+	    <!-- Display error message -->
+	    <div th:if="${errorMessage}" style="color: red;">
+	        <p th:text="${errorMessage}"></p>
+	    </div>
 
-        <div>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" th:value="${user.email}" required>
-        </div>
+	    <form th:action="@{/register}" method="post" th:object="${userDto}">
+	        <div>
+	            <label for="username">Username:</label>
+	            <input type="text" id="username" name="username" th:value="${userDto.username}" required>
+	        </div>
 
-        <div>
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" th:value="${user.password}" required>
-        </div>
+	        <div>
+	            <label for="email">Email:</label>
+	            <input type="email" id="email" name="email" th:value="${userDto.email}" required>
+	        </div>
 
-        <div>
-            <label for="confirmPassword">Confirm Password:</label>
-            <input type="password" id="confirmPassword" name="confirmPassword" required>
-        </div>
-		
-		<div>
-		    <input type="hidden" id="role" name="role"  value="CUSTOMER" required>
-		</div>
-		
-        <div>
-            <button type="submit">Register</button>
-        </div>
-    </form>
+	        <div>
+	            <label for="password">Password:</label>
+	            <input type="password" id="password" name="password" th:value="${userDto.password}" required>
+	        </div>
 
-    <div>
-        <a href="/login">Already have an account? Login</a>
-    </div>
+	        <div>
+	            <label for="confirmPassword">Confirm Password:</label>
+	            <input type="password" id="confirmPassword" name="confirmPassword" required>
+	        </div>
+	        
+	        <div>
+	            <input type="hidden" id="role" name="role" value="CUSTOMER" required>
+	        </div>
+	        
+	        <div>
+	            <button type="submit">Register</button>
+	        </div>
+	    </form>
+
+	    <div>
+	        <a href="/login">Already have an account? Login</a>
+	    </div>
+	</body>
+
 </body>
 </html>
